package az.alizeynalli.cashflow.core.service;

public abstract interface Service {
}
